fix(brand): fix add and update brand feature